Update css files to fix flickering on modal windows

--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ body {
   gap: 88px;
   margin-top: 114px;
   margin-bottom: 114px;
+  margin: 8vw;
 }
 
 .card {
@@ -222,17 +223,19 @@ body {
   background-color: #fff;
   border: 1px solid rgb(221, 214, 214);
   border-radius: 10px;
-  padding: 16px 16px 28px 16px;
-  margin-top: 30px;
+  /* padding: 16px 16px 28px 16px; */
+  padding: 6vw;
+  margin-top: 30px;  
 
   /* -----For Transitions and Animations----- */
-  transition: transform 0.5s, box-shadow 0.4s;
+  transition: transform 0.5s, box-shadow 0.45s;
 }
 
 .img-proj {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 90%;
 }
 
 .proj-header {
@@ -463,20 +466,26 @@ textarea:focus {
 /* adding transitions and animations */
 
 .card:hover {
-  transform: scale(1.02);
-  box-shadow: 0 0 10px #396df2;
+  /* transform: scale(1.02); */
+  box-shadow: 0 0 20px #396df2;
 }
 
 /* MODAL_CONTENT_STYLE */
 .modal-container {
   background-color: #fff;
-  border-radius: 16px;
   border: 1px solid #9096a1;
-  padding: 30px;
+  border-radius: 16px;
+  padding: 30px;  
   position: absolute;
-  transform: scale(0.9);
   box-sizing: border-box;
   z-index: 5;
+  margin: -4vw;
+  width: 80%;
+  filter: blur(0px);
+}
+
+.modal-container:hover {
+  width: 80%;
 }
 
 .header-container div {
@@ -541,4 +550,9 @@ textarea:focus {
   justify-content: space-around;
   align-items: center;
   margin: 10px;
+  box-sizing: content-box;
+}
+
+.btns-container .btn img {
+  margin: 0;
 }
